# dsp

./: .bumpversion.cfg  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  environment.yml  figs.ipynb  plot.py  pyproject.toml  run.py  setup.cfg  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  test-env.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  new_feature.md
.github/actions/: unit-tests.yaml
.github/workflows/: CI.yaml  figures.yaml  lint.yaml
boip/: __init__.py  _version.py  initialize.py  optimize.py  prune.py  train.py  utils.py  window.py
boip/cli/: args.py  main.py
boip/objectives/: __init__.py  cosines.py  discretize.py  gsobol.py
data/all-objs/beale/: H.npz  X.npz  Y.npz
data/all-objs/branin/: H.npz  X.npz  Y.npz
data/all-objs/bukin/: H.npz  X.npz  Y.npz
data/all-objs/camel/: H.npz  X.npz  Y.npz
data/all-objs/drop-wave/: H.npz  X.npz  Y.npz
data/all-objs/levy/: H.npz  X.npz  Y.npz
data/michalewicz-gamma/0.5/: H.npz  X.npz  Y.npz
data/michalewicz-gamma/1.0/: H.npz  X.npz  Y.npz
data/michalewicz-gamma/2.0/: H.npz  X.npz  Y.npz
data/michalewicz-prob/1.25/: H.npz  X.npz  Y.npz
data/michalewicz-prob/2.5/: H.npz  X.npz  Y.npz
data/michalewicz-prob/5.0/: H.npz  X.npz  Y.npz
dsp/: __init__.py  initialize.py  optimize.py  utils.py  window.py
dsp/cli/: args.py  main.py
dsp/objectives/: discretize.py  gsobol.py
figures/github/: README  README.md
notebooks/: figs.ipynb
scripts/: append.py  collate.py  figures.py  make_all_figs.sh
test/: test_args.py  test_initialize.py  test_objective.py  test_prune.py  test_train.py  test_window.py
