[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[tool.setuptools_scm]
write_to = "boip/_version.py"

[tool.pytest.ini_options]
addopts = "--cov boip"

[tool.coverage.run]
branch = true
omit = [
    "boip/_version.py",
    "boip/objectives/gsobol.py",
    "boip/objectives/cosines.py",
    "boip/optimize.py"
]

[tool.black]
line-length = 100
target-version = ["py38"]
skip-magic-trailing-comma = true
