[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "dsp/_version.py"

[tool.pytest.ini_options]
addopts = "--cov dsp"

[tool.coverage.run]
branch = true
omit = [
    "dsp/_version.py",
    "dsp/objectives/gsobol.py",
    "dsp/objectives/cosines.py",
    "dsp/optimize.py",
    "*/__init__.py",
    "dsp/cli/*"
]

[tool.black]
line-length = 100
target-version = ["py38"]
skip-magic-trailing-comma = true
