[bumpversion]
current_version = 0.1.0
commit = True

[metadata]
name = boip
author = david graff
author_email = deg711@g.harvard.edu
description = bayesian optimization with input pruning
long_description = file: README.md
long_description_content_type = text/markdown
version = beta
license = MIT
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
url = https://github.com/coleygroup/boip
platforms = Linux, Mac OS-X, Unix

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires = 
	botorch
	gpytorch
	pytorch
	numpy
	scipy
	tqdm

[options.entry_points]
console_scripts = 
	boip = boip.cli.main:main

[options.extras_require]
plot = 
	matplotlib
	seaborn
test = pytest
