[metadata]
name = dsp
version = 0.1.0
author = david graff
author_email = deg711@g.harvard.edu
description = bayesian optimization with input pruning
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
url = https://github.com/coleygroup/dsp
platforms = Linux, Mac OS-X, Unix

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires = 
	botorch
	gpytorch
	numpy
	scipy
	torch
	tqdm

[options.entry_points]
console_scripts = 
	dsp = dsp.cli.main:main

[options.extras_require]
dev =
	black
	flake8
	pre-commit
	pytest
plot = 
	matplotlib
	seaborn
test = pytest
